clang adapter result: version>=3.9 is ok, the rest will have bad inline optimization result.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
 README.md
 LICENCE
 /README.md
+/a.out
+/.vs/VSWorkspaceState.json
+/.vs/slnx.sqlite
+/.vs/ProjectSettings.json
+/.vs/call_in_stack/v15/ipch/AutoPCH/7efa7a9db74d9e8a/TEST.ipch
+/.vs/call_in_stack/v15/Browse.VC.opendb
+/.vs/call_in_stack/v15/Browse.VC.db
+/.vs/call_in_stack/v15/.suo
